# ALADDIN

./: .clang-format  .travis.yml  BaseDatapath.cpp  BaseDatapath.h  CHANGELOG  CMakeLists.txt  DDDG.cpp  DDDG.h  LICENSE.txt  Makefile  README  README.md  Scratchpad.h  ScratchpadDatapath.cpp  ScratchpadDatapath.h  aladdin.cpp  dddg.cpp  dddg.h  file_func.cpp  file_func.h
SHOC/: CMakeLists.txt  Makefile
SHOC/bb_gemm/: CMakeLists.txt  Makefile  bb_gemm.c  bb_gemm.h
SHOC/common/: Makefile.common  Makefile.gem5  Makefile.tracer
SHOC/fft/: CMakeLists.txt  Makefile  fft.c  fft.h
SHOC/md/: CMakeLists.txt  Makefile  md.c  md.h
SHOC/pp_scan/: CMakeLists.txt  Makefile  pp_scan.c  pp_scan.h
SHOC/reduction/: CMakeLists.txt  Makefile  reduction.c  reduction.h
SHOC/scripts/: aladdin_design.py  cacti_data.txt  config.py  gen_space.py  internal_power_script.py  llvm_compile.py  parse_power_per_run_ss.py  plot_space.py  run_aladdin.py  run_aladdin_local.py
SHOC/ss_sort/: CMakeLists.txt  Makefile  ss_sort.c  ss_sort.h
SHOC/stencil/: CMakeLists.txt  Makefile  stencil.c  stencil.h
SHOC/triad/: CMakeLists.txt  Makefile  triad.c  triad.h
common/: AladdinExceptions.cpp  AladdinExceptions.h  BaseDatapath.cpp  BaseDatapath.h  CMakeLists.txt  DDDG.cpp  DDDG.h  DatabaseConfig.cpp  DatabaseConfig.h  DatabaseDeps.h  DynamicEntity.h  ExecNode.h  LogicalArray.cpp  LogicalArray.h  LoopInfo.cpp  LoopInfo.h  Makefile  MemoryInterface.h  MemoryType.h  Node.h  Partition.cpp  Partition.h  Program.cpp  Program.h  ProgressTracker.h  ReadyPartition.cpp  ReadyPartition.h  Registers.cpp  Registers.h  Scratchpad.cpp  Scratchpad.h  ScratchpadDatapath.cpp  ScratchpadDatapath.h  SourceEntity.h  SourceManager.cpp  SourceManager.h  aladdin.cpp  boost_typedefs.h  debugger.cpp  debugger.h  (+23 more)
common/cacti-p/: README  Ucache.cc  Ucache.h  arbiter.cc  arbiter.h  area.cc  area.h  basic_circuit.h  cache.cfg  cacti  cacti.mk  cacti_interface.cc  cacti_interface.h  component.cc  component.h  crossbar.cc  crossbar.h  decoder.cc  decoder.h  htree2.cc  htree2.h  io.cc  main.cc  mat.cc  mat.h  nuca.cc  nuca.h  parameter.cc  powergating.cc  powergating.h  router.cc  router.h  subarray.h  technology.cc  version_cacti.h  wire.cc  wire.h
common/debugger/: debugger.cpp  debugger_commands.cpp  debugger_graph.h  debugger_print.cpp  debugger_print.h  debugger_prompt.cpp  debugger_prompt.h
common/graph_opts/: all_graph_opts.h  base_address_init.cpp  base_address_init.h  base_opt.cpp  base_opt.h  consecutive_branch_fusion.cpp  consecutive_branch_fusion.h  dma_base_address_init.cpp  dma_base_address_init.h  global_loop_pipelining.cpp  global_loop_pipelining.h  induction_dependence_removal.cpp  induction_dependence_removal.h  load_buffering.cpp  load_buffering.h  loop_unrolling.cpp  loop_unrolling.h  memory_ambiguation.cpp  memory_ambiguation.h  per_loop_pipelining.cpp  per_loop_pipelining.h  phi_node_removal.cpp  phi_node_removal.h  reg_load_store_fusion.cpp  reg_load_store_fusion.h  repeated_store_removal.cpp  repeated_store_removal.h  store_buffering.cpp  store_buffering.h  tree_height_reduction.cpp  tree_height_reduction.h
unit-test/: CMakeLists.txt  Makefile  node_matchers.h  test_dddg_generation.cpp  test_dma.cpp  test_dynamic_method_name.cpp  test_graph_trans.cpp  test_init_base_address.cpp  test_loop_flatten.cpp  test_loop_pipelining.cpp  test_loop_sampling.cpp  test_loop_unrolling.cpp  test_memory_ambiguation.cpp  test_performance.cpp  test_reg_load_store_fusion.cpp  test_rm_induction_var.cpp  test_rm_phi.cpp  test_special_math_op.cpp  test_spm_part.cpp  test_store_buffer.cpp  test_tree_height_reduction.cpp  unit-test-config.h
unit-test/inputs/: config-aes-aes  config-loop-sampling  config-loop-sampling-inner  config-loop-sampling-inner-pipelining  config-loop-sampling-pipelined  config-loop-sampling-unrolling  config-memory-ambiguation  config-p2-u2-P1  config-pp_scan-p4-u4-P1  config-reduction-p4-u4-P1  config-reg-ls-fusion  config-sort-radix  config-special-math-op  config-store-buffer  config-triad-dma-p2-u2-P1  config-triad-p2-u2-P1  (+7 more)
(+437 files in other folders)
